--- a/manifest.json
+++ b/manifest.json
@@ -46,7 +46,7 @@
 	
 	"web_accessible_resources": [
 		{
-		  "resources": [ "images/mal-logo.png"],
+		  "resources": [ "images/mal-logo.png", "images/sens-logo.png"],
 		  "matches": [ "https://letterboxd.com/*" ],
 		  "use_dynamic_url": true
 		}
