Update min android version and add smaller icons

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
 	"browser_specific_settings": {
 		"gecko_android": {
-		  "strict_min_version": "100.0"
+		  "strict_min_version": "113.0"
 		}
 	},	  
 	
@@ -15,7 +15,9 @@
 		"default_title": "Letterboxd Extras Settings",
 		"default_popup": "options.html",
 		"default_icon": {
-			"16": "icon128.png"
+			"16": "icon16.png",
+			"32": "icon32.png",
+			"128": "icon128.png"
 		}
 	},
 
