--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"name": "Letterboxd Extras",
 	"description": "Displays additional scores on Letterboxd (IMDB, Rotten Tomatoes, Metacritic).",
-	"version": "3.14.1",
+	"version": "3.15.0",
 	"minimum_chrome_version": "88",
 
 	"browser_specific_settings": {
@@ -50,7 +50,9 @@
 		"https://www.theyshootpictures.com/*",
 		"https://www.bfi.org.uk/*",
 		"https://www.allocine.fr/*",
-		"https://api.simkl.com/*"
+		"https://api.simkl.com/*",
+		"https://www.google.com/search*",
+		"scripting"
 	],
 
 	"content_scripts": [
@@ -58,11 +60,6 @@
 			"matches": [ "https://letterboxd.com/*" ],
 			"js": [ "polyfill.js", "letterboxd-extras.user.js", "jquery-3.6.0.min.js" ],
 			"run_at": "document_start"
-		},
-        {
-            "matches": [ "https://www.google.com/search*" ],
-            "js": [ "google2letterboxd.js" ],
-            "run_at": "document_end"
-        }
+		}
 	]
 }
