--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,8 @@
 
 	"options_ui": {
 		"page": "options.html",
-		"browser_style": true
+		"browser_style": true,
+		"open_in_tab": true
 	},
 
 	"permissions": [
