--- a/src/firefox/manifest.json
+++ b/src/firefox/manifest.json
@@ -3,33 +3,39 @@
 	"name": "Letterboxd Extras",
 	"description": "Displays additional scores on Letterboxd (IMDB, Rotten Tomatoes, Metacritic).",
 	"version": "3.15.5",
-	"minimum_chrome_version": "88",
-	
+	"browser_specific_settings": {
+		"gecko": {
+			"id": "{9abb0ce4-6348-4119-b97a-3f8116351aca}",
+			"strict_min_version": "109.0"
+		},
+		"gecko_android": {
+			"strict_min_version": "113.0"
+		}
+	},
 	"action": {
 		"default_title": "Letterboxd Extras Settings",
 		"default_popup": "options.html?type=action",
 		"default_icon": {
-			"16": "icon16.png",
-			"32": "icon32.png",
-			"128": "icon128.png"
+			"16": "icons/icon16.png",
+			"32": "icons/icon32.png",
+			"128": "icons/icon128.png"
 		}
 	},
-
 	"icons": {
-		"128": "icon128.png"
+		"16": "icons/icon16.png",
+		"32": "icons/icon32.png",
+		"128": "icons/icon128.png"
 	},
-
 	"options_ui": {
-		"page": "options.html",
-		"browser_style": true,
-		"open_in_tab": true
+		"page": "options.html"
 	},
-
 	"permissions": [
 		"storage",
 		"scripting"
 	],
-
+	"optional_permissions": [
+		"tabs"
+	],
 	"host_permissions": [
 		"https://www.imdb.com/*",
 		"https://letterboxd.com/*",
@@ -42,7 +48,6 @@
 		"https://api.jikan.moe/*",
 		"https://graphql.anilist.co/*"
 	],
-	
 	"optional_host_permissions": [
 		"https://api.mubi.com/*",
 		"https://apollo.senscritique.com/*",
@@ -53,25 +58,33 @@
 		"https://api.simkl.com/*",
 		"https://www.google.com/search*"
 	],
-
 	"background": {
-		"service_worker": "background.js",
+		"scripts": [
+			"background.js"
+		],
 		"type": "module"
 	},
-
 	"content_scripts": [
 		{
-			"matches": [ "https://letterboxd.com/*" ],
-			"js": [ "polyfill.js", "letterboxd-extras.user.js", "jquery-3.6.0.min.js" ],
+			"matches": [
+				"https://letterboxd.com/*"
+			],
+			"js": [
+				"polyfill.js",
+				"letterboxd-extras.user.js",
+				"jquery-3.6.0.min.js"
+			],
 			"run_at": "document_start"
 		}
 	],
-	
 	"web_accessible_resources": [
 		{
-		  "resources": [ "images/*"],
-		  "matches": [ "https://letterboxd.com/*" ],
-		  "use_dynamic_url": true
+			"resources": [
+				"images/*"
+			],
+			"matches": [
+				"https://letterboxd.com/*"
+			]
 		}
 	]
 }
