Basics of the setup page

--- a/src/firefox/manifest.json
+++ b/src/firefox/manifest.json
@@ -31,9 +31,7 @@
 	},
 	"permissions": [
 		"storage",
-		"scripting"
-	],
-	"optional_permissions": [
+		"scripting",
 		"tabs"
 	],
 	"host_permissions": [
