--- a/src/firefox/manifest.json
+++ b/src/firefox/manifest.json
@@ -27,7 +27,7 @@
 		"128": "icons/icon128.png"
 	},
 	"options_ui": {
-		"page": "options.html"
+		"page": "options.html?type=embed"
 	},
 	"permissions": [
 		"storage",
@@ -35,18 +35,17 @@
 		"tabs"
 	],
 	"host_permissions": [
-		"https://www.imdb.com/*",
 		"https://letterboxd.com/*",
+		"https://query.wikidata.org/*"
+	],
+	"optional_host_permissions": [
 		"https://*.imdb.com/*",
 		"https://www.rottentomatoes.com/*",
 		"https://www.boxofficemojo.com/*",
 		"https://webapp.cinemascore.com/*",
-		"https://query.wikidata.org/*",
 		"https://www.metacritic.com/*",
 		"https://api.jikan.moe/*",
-		"https://graphql.anilist.co/*"
-	],
-	"optional_host_permissions": [
+		"https://graphql.anilist.co/*",
 		"https://api.mubi.com/*",
 		"https://apollo.senscritique.com/*",
 		"https://*.filmaffinity.com/*",
