Remove jquery dependency

--- a/src/firefox/manifest.json
+++ b/src/firefox/manifest.json
@@ -63,7 +63,7 @@
 	"content_scripts": [
 		{
 			"matches": [ "https://letterboxd.com/*" ],
-			"js": [ "polyfill.js", "letterboxd-extras.user.js", "jquery-3.6.0.min.js" ],
+			"js": [ "polyfill.js", "letterboxd-extras.user.js" ],
 			"run_at": "document_start"
 		}
 	],
