--- a/src/chrome/manifest.json
+++ b/src/chrome/manifest.json
@@ -65,7 +65,7 @@
 	"content_scripts": [
 		{
 			"matches": [ "https://letterboxd.com/*" ],
-			"js": [ "polyfill.js", "letterboxd-extras.user.js" ],
+			"js": [ "polyfill.js", "additional.js", "build/letterboxd-extras.user.js" ],
 			"run_at": "document_start"
 		}
 	],
