init branch, add chart creation HTML helper, add AniListhelper sketch, replace 'al

--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "Displays additional scores on Letterboxd (IMDB, Rotten Tomatoes, Metacritic).",
 	"type": "module",
+	
 	"scripts": {
 		"test": "eslint .",
 		"build-all": "rollup -c user.js/rollup.config.js && build.bat chrome && build.bat firefox",
@@ -30,6 +31,9 @@
 			"es6": true,
 			"webextensions": true
 		},
+		"parserOptions": {
+			"sourceType": "module"
+		},
 		"rules": {
 			"func-names": 0,
 			"capitalized-comments": 0,
@@ -39,6 +43,7 @@
 			"no-throw-literal": 0,
 			"no-invalid-this": 0,
 			"no-console": 0,
+			"no-negated-condition": 0,
 			"padded-blocks": 0,
 			"quote-props": 0
 		}
