--- a/src/package.json
+++ b/src/package.json
@@ -5,8 +5,9 @@
 	"type": "module",
 	"scripts": {
 		"test": "eslint .",
-		"build-chrome": "rollup -c rollup.config.js && ..\\build.bat chrome",
-		"build-firefox": "rollup -c rollup.config.js && ..\\build.bat firefox"
+		"build-all": "rollup -c user.js/rollup.config.js && build.bat chrome && build.bat firefox",
+		"build-chrome": "rollup -c user.js/rollup.config.js && build.bat chrome",
+		"build-firefox": "rollup -c user.js/rollup.config.js && build.bat firefox"
 	},
 	"repository": "https://github.com/duncanlang/Letterboxd-Extras.git",
 	"author": "Duncan Lang (https://github.com/duncanlang)",
