Different sized icons

--- a/src/chrome/manifest.json
+++ b/src/chrome/manifest.json
@@ -11,6 +11,9 @@
 		"default_icon": {
 			"16": "icon16.png",
 			"32": "icon32.png",
+			"48": "icon48.png",
+			"64": "icon64.png",
+			"96": "icon96.png",
 			"128": "icon128.png",
 			"256": "icon256.png",
 			"512": "icon512.png"
@@ -20,6 +23,9 @@
 	"icons": {
 		"16": "icon16.png",
 		"32": "icon32.png",
+		"48": "icon48.png",
+		"64": "icon64.png",
+		"96": "icon96.png",
 		"128": "icon128.png",
 		"256": "icon256.png",
 		"512": "icon512.png"
