--- a/src/chrome/manifest.json
+++ b/src/chrome/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 3,
 	"name": "Letterboxd Extras",
-	"description": "Displays additional scores on Letterboxd (IMDB, Rotten Tomatoes, Metacritic).",
+	"description": "Adds extra features to Letterboxd.",
 	"version": "3.18.0",
 	"minimum_chrome_version": "88",
 	
