Spines fixes for mobile, film affinity fixes
Also anilist star fix, button order fix, options page changes

--- a/src/firefox/manifest.json
+++ b/src/firefox/manifest.json
@@ -74,7 +74,8 @@
 		"https://markuapi.apn.leapcell.app/*",
 		"https://kinopoiskapiunofficial.tech/api/*",
 		"https://api.douban.com/*",
-		"https://api.mydramalist.com/*"
+		"https://api.mydramalist.com/*",
+		"tabs"
 	],
 
 	"content_scripts": [
